{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 24,
  "lineage": "af099769-21f8-4955-787c-acec2651af8a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nodejs-stage-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09b91011e7c52ed06",
            "arn": "arn:aws:ec2:us-east-1:056285329956:elastic-ip/eipalloc-09b91011e7c52ed06",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0788f6682c69b017e",
            "domain": "vpc",
            "id": "eipalloc-09b91011e7c52ed06",
            "instance": "i-057fbc21e07181194",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f4b2029ce7196550",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-232-18-237.compute-1.amazonaws.com",
            "public_ip": "34.232.18.237",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nodejs-stage-instance",
            "aws_internet_gateway.nodejs-stage-gw",
            "aws_network_interface.nodejs-stage-nic",
            "aws_security_group.allow_web",
            "aws_subnet.nodejs-stage-subnet",
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nodejs-stage-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:056285329956:instance/i-057fbc21e07181194",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057fbc21e07181194",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nodejs-stage-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0f4b2029ce7196550"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4b2029ce7196550",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d11f0a4390830781",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a14e87d4b342eefd",
            "tags": {
              "Name": "nodejs-stage-instance"
            },
            "tags_all": {
              "Name": "nodejs-stage-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d6b95c1636735ef1"
            ]
          },
          "dependencies": [
            "aws_network_interface.nodejs-stage-nic",
            "aws_security_group.allow_web",
            "aws_subnet.nodejs-stage-subnet",
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nodejs-stage-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056285329956:internet-gateway/igw-0280e47245f7030f2",
            "id": "igw-0280e47245f7030f2",
            "owner_id": "056285329956",
            "vpc_id": "vpc-042cb5b1bbf856151"
          },
          "dependencies": [
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nodejs-stage-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056285329956:network-interface/eni-0f4b2029ce7196550",
            "id": "eni-0f4b2029ce7196550",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:d0:79:6e:63",
            "owner_id": "056285329956",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d6b95c1636735ef1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a14e87d4b342eefd"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.nodejs-stage-subnet",
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nodejs-stage-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056285329956:route-table/rtb-0597caf8d2acc97b3",
            "id": "rtb-0597caf8d2acc97b3",
            "owner_id": "056285329956",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0280e47245f7030f2",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0280e47245f7030f2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nodejs-stage-route-table"
            },
            "tags_all": {
              "Name": "nodejs-stage-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-042cb5b1bbf856151"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nodejs-stage-gw",
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nodejs-stage-ta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05544ddb53e772f5b",
            "route_table_id": "rtb-0597caf8d2acc97b3",
            "subnet_id": "subnet-0a14e87d4b342eefd"
          },
          "dependencies": [
            "aws_internet_gateway.nodejs-stage-gw",
            "aws_route_table.nodejs-stage-route-table",
            "aws_subnet.nodejs-stage-subnet",
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056285329956:security-group/sg-0d6b95c1636735ef1",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6b95c1636735ef1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "056285329956",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-042cb5b1bbf856151"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nodejs-stage-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056285329956:subnet/subnet-0a14e87d4b342eefd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a14e87d4b342eefd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "056285329956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nodejs-stage-subnet"
            },
            "tags_all": {
              "Name": "nodejs-stage-subnet"
            },
            "vpc_id": "vpc-042cb5b1bbf856151"
          },
          "dependencies": [
            "aws_vpc.nodejs-stage-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nodejs-stage-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:056285329956:vpc/vpc-042cb5b1bbf856151",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086f11a5ac263895b",
            "default_route_table_id": "rtb-0e1f064305dc049e4",
            "default_security_group_id": "sg-008a6f49ce4b89b1c",
            "dhcp_options_id": "dopt-031655d1e21e4e2d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042cb5b1bbf856151",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e1f064305dc049e4",
            "owner_id": "056285329956",
            "tags": {
              "Name": "nodejs-stage-vpc"
            },
            "tags_all": {
              "Name": "nodejs-stage-vpc"
            }
          }
        }
      ]
    }
  ]
}